Fix missing font.

--- a/roles/desktop/tasks/install-x11.yaml
+++ b/roles/desktop/tasks/install-x11.yaml
@@ -29,6 +29,11 @@
       - xwininfo
     state: present
 
+- name: Install fonts
+  xbps:
+    package: dejavu-fonts-ttf
+    state: present
+
 - name: Install Hiragana, Katakana, Kanji fonts
   xbps:
     package:
