Add Signal Private Messenger to desktop role

--- a/roles/desktop/tasks/main.yaml
+++ b/roles/desktop/tasks/main.yaml
@@ -3,3 +3,9 @@
 
 - name: Install X11
   include_tasks: install-x11.yaml
+
+- name: Install Signal Private Messenger
+  xbps:
+    package:
+      - Signal-Desktop
+    state: present
