--- a/roles/virtualization/tasks/main.yaml
+++ b/roles/virtualization/tasks/main.yaml
@@ -33,6 +33,11 @@
     owner: root
     src: k3s.conf
 
+- name: Start k3s-server
+  runit:
+    name: k3s-server
+    state: started
+
 - name: Create root kubectl configuration directory
   file:
     group: root
@@ -40,6 +45,10 @@
     owner: root
     path: /root/.kube
     state: directory
+
+- name: Wait for K3s to populate /etc/rancher
+  wait_for:
+    path: /etc/rancher/k3s/k3s.yaml
 
 - name: Install root kubectl config
   copy:
@@ -70,11 +79,6 @@
     repo_name: ingress-nginx
     repo_url: https://kubernetes.github.io/ingress-nginx
 
-- name: Start k3s-server
-  runit:
-    name: k3s-server
-    state: started
-
 - name: Deploy ingress-nginx
   kubernetes.core.helm:
     chart_ref: ingress-nginx/ingress-nginx
@@ -92,14 +96,14 @@
     - virtlockd
     - virtlogd
 
-- name: Disable k3s-server
+- name: Maybe disable k3s-server
   when: not enable_k3s_server
   runit:
     name: k3s-server
     enabled: no
     state: stopped
 
-- name: Enable k3s-server
+- name: Maybe enable k3s-server
   when: enable_k3s_server
   runit:
     name: k3s-server
