development: add gnupg2
gnupg2 usage is sometimes required to download emacs packages from https://elpa.gnu.org

--- a/roles/development/tasks/provision-emacs.yaml
+++ b/roles/development/tasks/provision-emacs.yaml
@@ -1,7 +1,8 @@
-- name: Install emacs package
+- name: Install necessary packages for emacs
   xbps:
     package:
       - emacs-x11
+      - gnupg2
 
 - name: Install other text editing packages
   xbps:
