--- a/roles/virtualization/tasks/main.yaml
+++ b/roles/virtualization/tasks/main.yaml
@@ -1,4 +1,5 @@
 - name: Install virtualization packages
+  become: yes
   xbps:
     package:
       - buildah
@@ -10,6 +11,7 @@
     state: present
 
 - name: Install container image registry configuration
+  become: yes
   copy:
     dest: /etc/containers/registries.conf
     group: root
@@ -18,6 +20,7 @@
     src: registries.conf
 
 - name: Create K3s configuration directory
+  become: yes
   file:
     group: root
     mode: 0755
@@ -26,6 +29,7 @@
     state: directory
 
 - name: Install K3s configuration
+  become: yes
   copy:
     dest: /etc/k3s/config
     group: root
@@ -34,11 +38,13 @@
     src: k3s.conf
 
 - name: Start k3s-server
+  become: yes
   runit:
     name: k3s-server
     state: started
 
 - name: Create root kubectl configuration directory
+  become: yes
   file:
     group: root
     mode: 0755
@@ -85,6 +91,7 @@
     update_repo_cache: true
 
 - name: Enable virtualization services
+  become: yes
   runit:
     name: '{{ item }}'
     enabled: yes
@@ -96,6 +103,7 @@
 
 - name: Maybe disable k3s-server
   when: not enable_k3s_server
+  become: yes
   runit:
     name: k3s-server
     enabled: no
@@ -103,18 +111,21 @@
 
 - name: Maybe enable k3s-server
   when: enable_k3s_server
+  become: yes
   runit:
     name: k3s-server
     enabled: yes
     state: started
 
 - name: Install k3s command aliases
+  become: yes
   copy:
     dest: /usr/local/bin/
     mode: 0755
     src: k3s-commands/
 
 - name: Remove uninteresting QEMU files
+  become: yes
   file:
     path: '/usr/bin/{{ item }}'
     state: absent
