--- a/roles/desktop/tasks/install-x11.yaml
+++ b/roles/desktop/tasks/install-x11.yaml
@@ -1,4 +1,5 @@
 - name: Install X11 packages
+  become: yes
   xbps:
     package:
       - disputils
@@ -30,11 +31,13 @@
     state: present
 
 - name: Install fonts
+  become: yes
   xbps:
     package: dejavu-fonts-ttf
     state: present
 
 - name: Install Hiragana, Katakana, Kanji fonts
+  become: yes
   xbps:
     package:
       - font-hanazono
