--- a/roles/development/tasks/main.yaml
+++ b/roles/development/tasks/main.yaml
@@ -4,6 +4,9 @@
 - name: Provision mail environment
   import_tasks: provision-mail-environment.yaml
 
+- name: Provision base development environment
+  import_tasks: provision-base-development-environment.yaml
+
 - name: Provision Python development environment
   import_tasks: provision-python-development-environment.yaml
 
