--- a/roles/virtualization/tasks/main.yaml
+++ b/roles/virtualization/tasks/main.yaml
@@ -1,168 +1,8 @@
-- name: Install virtualization packages
-  become: yes
-  xbps:
-    package:
-      - buildah
-      - libvirt-devel
-      - k3s
-      - kubernetes-helm
-      - podman
-      - qemu
-    state: present
+- name: Provision K3s
+  import_tasks: provision-k3s.yaml
 
-- name: Install container image registry configuration
-  become: yes
-  copy:
-    dest: /etc/containers/registries.conf
-    group: root
-    mode: 0644
-    owner: root
-    src: registries.conf
+- name: Provision libvirt
+  import_tasks: provision-libvirt.yaml
 
-- name: Create K3s configuration directory
-  become: yes
-  file:
-    group: root
-    mode: 0755
-    owner: root
-    path: /etc/k3s/
-    state: directory
-
-- name: Install K3s configuration
-  become: yes
-  copy:
-    dest: /etc/k3s/config
-    group: root
-    mode: 0644
-    owner: root
-    src: k3s.conf
-
-- name: Start k3s-server
-  become: yes
-  runit:
-    name: k3s-server
-    state: started
-
-- name: Create root kubectl configuration directory
-  become: yes
-  file:
-    group: root
-    mode: 0755
-    owner: root
-    path: /root/.kube
-    state: directory
-
-- name: Wait for K3s to populate /etc/rancher
-  wait_for:
-    path: /etc/rancher/k3s/k3s.yaml
-
-- name: Install root kubectl config
-  become: yes
-  command: |
-    install -o root -g root -m '0600' '/etc/rancher/k3s/k3s.yaml' '/root/.kube/config'
-
-- name: Create user kubectl configuration directory
-  file:
-    group: '{{ user | mandatory }}'
-    mode: 0755
-    owner: '{{ user | mandatory }}'
-    path: '/home/{{ user | mandatory }}/.kube'
-    state: directory
-
-- name: Install user kubectl config
-  become: yes
-  command: |
-    install -o '{{ user | mandatory }}' \
-            -g '{{ user | mandatory }}' \
-            -m '0600'
-            '/etc/rancher/k3s/k3s.yaml' \
-            '/home/{{ user | mandatory }}/.kube/config'
-
-- name: Add ingress-nginx Helm Chart Repository
-  kubernetes.core.helm_repository:
-    repo_name: ingress-nginx
-    repo_url: https://kubernetes.github.io/ingress-nginx
-
-- name: Deploy ingress-nginx
-  kubernetes.core.helm:
-    chart_ref: ingress-nginx/ingress-nginx
-    release_name: nginx-ingress
-    release_namespace: kube-system
-    update_repo_cache: true
-
-- name: Enable virtualization services
-  become: yes
-  runit:
-    name: '{{ item }}'
-    enabled: yes
-    state: started
-  with_items:
-    - libvirtd
-    - virtlockd
-    - virtlogd
-
-- name: Maybe disable k3s-server
-  when: not enable_k3s_server
-  become: yes
-  runit:
-    name: k3s-server
-    enabled: no
-    state: stopped
-
-- name: Maybe enable k3s-server
-  when: enable_k3s_server
-  become: yes
-  runit:
-    name: k3s-server
-    enabled: yes
-    state: started
-
-- name: Install k3s command aliases
-  become: yes
-  copy:
-    dest: /usr/local/bin/
-    mode: 0755
-    src: k3s-commands/
-
-- name: Remove uninteresting QEMU files
-  become: yes
-  file:
-    path: '/usr/bin/{{ item }}'
-    state: absent
-  with_items:
-    - qemu-alpha
-    - qemu-cris
-    - qemu-hppa
-    - qemu-nios2
-    - qemu-microblaze
-    - qemu-microblazeel
-    - qemu-riscv32
-    - qemu-riscv64
-    - qemu-sh4
-    - qemu-sh4eb
-    - qemu-sparc
-    - qemu-sparc32plus
-    - qemu-sparc64
-    - qemu-xten
-    - qemu-xten
-    - qemu-system-unicore32
-    - qemu-system-moxie
-    - qemu-system-nios2
-    - qemu-system-or1k
-    - qemu-system-cris
-    - qemu-system-microblaze
-    - qemu-system-microblazeel
-    - qemu-system-tricore
-    - qemu-system-lm32
-    - qemu-system-m68k
-    - qemu-system-riscv32
-    - qemu-system-riscv64
-    - qemu-system-sparc
-    - qemu-system-s390x
-    - qemu-system-xtensa
-    - qemu-system-xtensaeb
-    - qemu-system-alpha
-    - qemu-system-hppa
-    - qemu-system-sh4
-    - qemu-system-sh4eb
-    - qemu-system-sparc64
+- name: Provision QEMU
+  import_tasks: provision-qemu.yaml
