--- a/roles/base/tasks/main.yaml
+++ b/roles/base/tasks/main.yaml
@@ -1,3 +1,6 @@
+- name: Provision boot
+  import_tasks: provision-boot.yaml
+
 - name: Install non-free xbps repository
   become: yes
   xbps:
@@ -93,7 +96,6 @@
       - strace
       - sudo
       - sysfsutils
-      - syslinux
       - sysstat
       - tcpflow
       - time
