--- a/roles/virtualization/tasks/main.yaml
+++ b/roles/virtualization/tasks/main.yaml
@@ -7,5 +7,8 @@
 - name: Provision libvirt
   import_tasks: provision-libvirt.yaml
 
+- name: Provision RDP client
+  import_tasks: provision-rdp-client.yaml
+
 - name: Provision QEMU
   import_tasks: provision-qemu.yaml
