development: refine filesystem location for my public notes.
Creating public subdirectory so I can have separate locations for my private notes and
work notes, but still have them all indexed by org-roam.

--- a/roles/development/tasks/main.yaml
+++ b/roles/development/tasks/main.yaml
@@ -13,7 +13,16 @@
 - name: Provision Emacs
   import_tasks: provision-emacs.yaml
 
+- name: Make directory for user notes
+  become: yes
+  file:
+    group: '{{ user }}'
+    mode: 0755
+    owner: '{{ user }}'
+    path: '/home/{{ user | mandatory }}/notes/'
+    state: directory
+
 - name: git clone my notes
   git:
-    dest: '/home/{{ user | mandatory }}/notes'
+    dest: '/home/{{ user | mandatory }}/notes/public'
     repo: 'https://github.com/Negdayen/notes.git'
