development: Fix non-root user mail.

--- a/roles/development/tasks/provision-mail-environment.yaml
+++ b/roles/development/tasks/provision-mail-environment.yaml
@@ -44,4 +44,6 @@
     mb2md -s '{{ item.filepath }}' -d '/home/{{ user }}/mail'
 
 - name: Add new mail to notmuch database
+  become: yes
+  become_user: '{{ user | mandatory }}'
   command: notmuch new
