--- a/roles/virtualization/tasks/provision-google-cloud-sdk.yaml
+++ b/roles/virtualization/tasks/provision-google-cloud-sdk.yaml
@@ -10,7 +10,7 @@
 - name: Download Google Cloud SDK
   become: yes
   unarchive:
-    dest: '/opt/google/google-cloud-sdk'
+    dest: '/opt/google'
     remote_src: yes
     src: 'https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-353.0.0-linux-x86_64.tar.gz'
 
