virtualization: Add missing k3s runit service link.

--- a/roles/virtualization/tasks/provision-k3s.yaml
+++ b/roles/virtualization/tasks/provision-k3s.yaml
@@ -35,6 +35,8 @@
       src: /run/runit/supervise.k3s-agent/
     - path: /etc/sv/k3s-agent/log/supervise
       src: /run/runit/supervise.k3s-agent-log/
+    - path: /var/service/k3s-server
+      src: /etc/sv/k3s-server/
   file:
     follow: no
     force: yes
